src/objects/DiscardedProduct__c.object
<CustomObject>
    
    <fields>
        <fullName>Intension__c</fullName>
        <label>Intension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>OrderType</label>
        <picklist>
            <picklistValues>
                <fullName>DirectOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InDirectOrder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>DiscardedProducts</relationshipLabel>
        <relationshipName>DiscardedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceBookEntryId__c</fullName>
        <label>PriceBookEntry</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseStandardPrice</label>
        <type>Checkbox</type>
    </fields>
    <label>DiscardedProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DiscardedProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DiscardedProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>